veg classifier trained and large files moved

--- a/.gitignore
+++ b/.gitignore
@@ -737,3 +737,4 @@ Data/ML_Test6/jpg_files/avgMonthlyVegPosition.png
 CoastWatch.ipynb
 .ipynb_checkpoints/CoastWatch-checkpoint.ipynb
 Data/
+Classification/Data/
