--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ READMEnotes.md
 *.pyc
 CL_DriverTemplate_Test.py
 Validation/StAndrews_20180527_DTM_1m_EPSG32630.tif
+Validation/StAndrews_20180527_DTM_1m_EPSG27700.tif
