--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ READMEnotes.md
 CL_DriverTemplate_Test.py
 Validation/StAndrews_20180527_DTM_1m_EPSG32630.tif
 Validation/StAndrews_20180527_DTM_1m_EPSG27700.tif
+Validation/
