--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ CL_DriverTemplate_Test.py
 Validation/StAndrews_20180527_DTM_1m_EPSG32630.tif
 Validation/StAndrews_20180527_DTM_1m_EPSG27700.tif
 Validation/
+Shoreline.ipynb
+VegEdge.ipynb
+
