trying to fix deleted files on gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,25 @@ Validation/
 Shoreline.ipynb
 VegEdge.ipynb
 
+Classification/training_data/Aberdeen/20190227T113311_20190227T113314_T30VWJ.jpg
+Classification/training_data/Aberdeen/20190227T113311_20190227T113314_T30VWJ.pkl
+Classification/training_data/Aberdeen/20190309T113311_20190309T113313_T30VWJ.jpg
+Classification/training_data/Aberdeen/20190309T113311_20190309T113313_T30VWJ.pkl
+Classification/training_data/Aberdeen/20190314T113319_20190314T113403_T30VWJ.jpg
+Classification/training_data/Aberdeen/20190314T113319_20190314T113403_T30VWJ.pkl
+Classification/training_data/Aberdeen/20190503T113329_20190503T113326_T30VWJ.jpg
+Classification/training_data/Aberdeen/20190503T113329_20190503T113326_T30VWJ.pkl
+Classification/training_data/Aberdeen/20190724T112121_20190724T112448_T30VWJ.jpg
+Classification/training_data/Aberdeen/20190724T112121_20190724T112448_T30VWJ.pkl
+Classification/training_data/Aberdeen/20190826T113321_20190826T113320_T30VWJ.jpg
+Classification/training_data/Aberdeen/20190826T113321_20190826T113320_T30VWJ.pkl
+Classification/training_data/Aberdeen/20191012T112121_20191012T112445_T30VWJ.jpg
+Classification/training_data/Aberdeen/20191012T112121_20191012T112445_T30VWJ.pkl
+Classification/training_data/Aberdeen/20191129T113329_20191129T113328_T30VWJ.jpg
+Classification/training_data/Aberdeen/20191129T113329_20191129T113328_T30VWJ.pkl
+Classification/training_data/Aberdeen/LC08_204020_20190418.jpg
+Classification/training_data/Aberdeen/LC08_204020_20190418.pkl
+Classification/training_data/Aberdeen/LC08_204020_20190723.jpg
+Classification/training_data/Aberdeen/LC08_204020_20190723.pkl
+Classification/training_data/Aberdeen/LC08_205020_20190409.jpg
+Classification/training_data/Aberdeen/LC08_205020_20190409.pkl
