--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ Validation/StAndrews_20180527_DTM_1m_EPSG27700.tif
 Validation/
 Shoreline.ipynb
 VegEdge.ipynb
-
+VegEdge_Montrose2022.py
+VegEdge_StAndrewsTimeseries.py
+.ipynb_checkpoints
