--- a/coastlearn_environment.yml
+++ b/coastlearn_environment.yml
@@ -42,10 +42,10 @@ dependencies:
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
   - c-blosc2=2.2.0=h7a311fb_0
-  - ca-certificates=2022.9.24=ha878542_0
+  - ca-certificates=2023.7.22=hbcca054_0
   - cachetools=4.2.4=pyhd8ed1ab_0
   - cairo=1.16.0=ha61ee94_1012
-  - certifi=2022.9.24=pyhd8ed1ab_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
   - cffi=1.15.1=py38h4a40e3a_0
   - cfitsio=4.1.0=hd9d235c_0
   - chardet=5.0.0=py38h578d9bd_0
@@ -258,6 +258,7 @@ dependencies:
   - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mccabe=0.6.1=py_1
   - mistune=0.8.4=py38h497a2fe_1005
+  - motuclient=1.8.8=pyhd8ed1ab_0
   - multidict=6.0.2=py38h0a891b7_1
   - munch=2.5.0=py_0
   - munkres=1.1.4=pyh9f0ad1d_0
@@ -282,7 +283,7 @@ dependencies:
   - numpydoc=1.4.0=pyhd8ed1ab_1
   - openh264=2.3.0=h27087fc_0
   - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1s=h166bdaf_0
+  - openssl=1.1.1v=hd590300_0
   - p11-kit=0.24.1=hc5aa10d_0
   - packaging=21.3=pyhd8ed1ab_0
   - pandas=1.4.3=py38h47df419_0
@@ -471,4 +472,3 @@ dependencies:
   - zlib=1.2.12=h166bdaf_2
   - zlib-ng=2.0.6=h166bdaf_0
   - zstd=1.5.2=h8a70e8d_4
-
