--- a/coastguard_environment.yml
+++ b/coastguard_environment.yml
@@ -6,181 +6,190 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - affine=2.3.1
-  - aiohttp=3.8.1
-  - aiosignal=1.2.0
-  - alabaster=0.7.12
+  - affine=2.4.0
+  - aiohttp=3.8.5
+  - aiosignal=1.3.1
+  - alabaster=0.7.13
   - alsa-lib=1.2.6.1
-  - anyio=3.6.1
+  - anyio=4.0.0
   - aom=3.4.0
-  - argon2-cffi=21.3.0
+  - argon2-cffi=23.1.0
   - argon2-cffi-bindings=21.2.0
-  - arrow=1.2.2
+  - arrow=1.3.0
   - astroid=2.5.8
   - astropy=5.1
-  - async-timeout=4.0.2
+  - async-timeout=4.0.3
   - atomicwrites=1.4.1
   - attr=2.5.1
-  - attrs=22.1.0
+  - attrs=23.1.0
   - autopep8=1.6.0
-  - babel=2.10.3
+  - babel=2.12.1
   - backcall=0.2.0
   - backports=1.0
-  - backports.functools_lru_cache=1.6.4
-  - beautifulsoup4=4.11.1
+  - backports.functools_lru_cache=1.6.5
+  - beautifulsoup4=4.12.2
   - binaryornot=0.4.4
-  - black=22.6.0
-  - bleach=5.0.1
-  - blosc=1.21.1
+  - black=23.9.1
+  - bleach=6.0.0
+  - blosc=1.21.5
   - boost-cpp=1.74.0
-  - bqplot=0.12.33
-  - branca=0.5.0
+  - bqplot=0.12.40
+  - branca=0.6.0
   - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotlipy=0.7.0
+  - brotli-python=1.0.9
   - brunsli=0.1
   - bzip2=1.0.8
-  - c-ares=1.18.1
-  - c-blosc2=2.2.0
+  - c-ares=1.19.1
+  - c-blosc2=2.10.2
   - ca-certificates=2023.7.22
-  - cachetools=4.2.4
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - cachetools=5.3.1
   - cairo=1.16.0
   - certifi=2023.7.22
-  - cffi=1.15.1
+  - cffi=1.16.0
   - cfitsio=4.1.0
   - cftime=1.6.2
-  - chardet=5.0.0
+  - chardet=5.2.0
   - charls=2.3.4
-  - charset-normalizer=2.1.0
-  - click=8.1.3
+  - charset-normalizer=3.2.0
+  - click=8.1.7
   - click-plugins=1.1.1
   - cligj=0.7.2
-  - cloudpickle=2.1.0
-  - colorama=0.4.5
+  - cloudpickle=2.2.1
+  - colorama=0.4.6
   - colour=0.1.5
-  - cookiecutter=2.1.1
-  - cryptography=37.0.4
+  - comm=0.1.4
+  - contourpy=1.1.1
+  - cookiecutter=2.4.0
+  - cryptography=38.0.4
   - curl=7.83.1
   - cycler=0.11.0
-  - cytoolz=0.12.0
-  - dask-core=2022.8.0
   - dav1d=1.0.0
   - dbus=1.13.6
-  - debugpy=1.6.3
+  - debugpy=1.8.0
   - decorator=5.1.1
   - defusedxml=0.7.1
-  - diff-match-patch=20200713
+  - diff-match-patch=20230430
   - docutils=0.19
-  - earthengine-api=0.1.318
-  - ee_extra=0.0.14
+  - earthengine-api=0.1.371
+  - ee_extra=0.0.15
+  - eerepr=0.0.4
   - entrypoints=0.4
-  - expat=2.4.8
+  - exceptiongroup=1.1.3
+  - expat=2.5.0
   - ffmpeg=5.1.0
   - ffmpeg-python=0.2.0
   - fftw=3.3.10
-  - filelock=3.8.0
+  - filelock=3.12.4
   - fiona=1.8.21
   - flake8=4.0.1
-  - flit-core=3.7.1
-  - folium=0.12.1.post1
+  - folium=0.14.0
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
   - font-ttf-ubuntu=0.83
-  - fontconfig=2.14.0
+  - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.35.0
+  - fonttools=4.43.0
+  - fqdn=1.5.1
   - freetype=2.12.1
   - freexl=1.0.6
-  - frozenlist=1.3.1
-  - fsspec=2022.7.1
-  - future=0.18.2
+  - frozenlist=1.4.0
+  - future=0.18.3
   - gdal=3.5.1
-  - gdown=4.5.1
-  - geeadd=0.5.4
-  - geemap=0.16.4
+  - gdown=4.7.1
+  - geeadd=0.5.6
+  - geemap=0.28.0
   - geocoder=1.38.1
   - geographiclib=1.52
-  - geojson=2.5.0
+  - geojson=3.0.1
   - geopandas=0.11.1
   - geopandas-base=0.11.1
-  - geopy=2.2.0
+  - geopy=2.4.0
   - geos=3.11.0
   - geotiff=1.7.1
-  - gettext=0.19.8.1
+  - gettext=0.21.1
   - giflib=5.2.1
   - glib=2.72.1
   - glib-tools=2.72.1
   - gmp=6.2.1
-  - gnutls=3.7.6
-  - google-api-core=1.22.2
-  - google-api-python-client=1.12.8
-  - google-auth=1.35.0
-  - google-auth-httplib2=0.1.0
-  - google-cloud-core=1.7.1
-  - google-cloud-storage=1.19.0
+  - gnutls=3.7.8
+  - google-api-core=2.12.0
+  - google-api-python-client=2.101.0
+  - google-auth=2.23.2
+  - google-auth-httplib2=0.1.1
+  - google-cloud-core=2.3.3
+  - google-cloud-storage=2.11.0
   - google-crc32c=1.1.2
-  - google-resumable-media=2.3.3
-  - googleapis-common-protos=1.56.4
+  - google-resumable-media=2.6.0
+  - googleapis-common-protos=1.60.0
   - grpc-cpp=1.48.0
   - grpcio=1.48.0
   - gst-plugins-base=1.20.3
   - gstreamer=1.20.3
   - hdf4=4.2.15
   - hdf5=1.12.2
-  - httplib2=0.20.4
-  - httplib2shim=0.0.3
+  - httplib2=0.22.0
   - icu=70.1
-  - idna=3.3
+  - idna=3.4
   - imagecodecs=2022.8.8
-  - imageio=2.21.1
+  - imageio=2.31.1
   - imagesize=1.4.1
-  - importlib-metadata=4.11.4
-  - importlib_metadata=4.11.4
-  - importlib_resources=5.9.0
+  - importlib-metadata=6.8.0
+  - importlib-resources=6.1.0
+  - importlib_metadata=6.8.0
+  - importlib_resources=6.1.0
   - inflection=0.5.1
-  - intervaltree=3.0.2
-  - ipyevents=2.0.1
+  - intervaltree=3.1.0
+  - ipyevents=2.0.2
   - ipyfilechooser=0.6.0
-  - ipykernel=6.15.1
-  - ipyleaflet=0.17.0
+  - ipykernel=6.25.2
+  - ipyleaflet=0.17.4
   - ipython=7.33.0
   - ipython_genutils=0.2.0
-  - ipytree=0.2.1
-  - ipywidgets=7.7.1
-  - isort=5.10.1
+  - ipytree=0.2.2
+  - ipywidgets=8.1.1
+  - isoduration=20.11.0
+  - isort=5.12.0
   - jack=1.9.18
+  - jaraco.classes=3.3.0
   - jedi=0.18.1
   - jeepney=0.8.0
-  - jellyfish=0.9.0
+  - jellyfish=1.0.1
   - jinja2=3.1.2
-  - jinja2-time=0.2.0
-  - joblib=1.1.0
+  - joblib=1.3.2
   - jpeg=9e
   - json-c=0.16
-  - json5=0.9.5
-  - jsonschema=4.9.1
-  - jupyter_client=7.3.4
-  - jupyter_core=4.11.1
-  - jupyter_server=1.18.1
-  - jupyterlab=3.4.5
+  - json5=0.9.14
+  - jsonpointer=2.4
+  - jsonschema=4.19.1
+  - jsonschema-specifications=2023.7.1
+  - jsonschema-with-format-nongpl=4.19.1
+  - jupyter_client=8.3.1
+  - jupyter_core=5.3.2
+  - jupyter_events=0.7.0
+  - jupyter_server=2.7.3
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab=3.5.3
   - jupyterlab_pygments=0.2.2
-  - jupyterlab_server=2.15.0
-  - jupyterlab_widgets=1.1.1
+  - jupyterlab_server=2.25.0
+  - jupyterlab_widgets=3.0.9
   - jxrlib=1.1
   - kealib=1.4.15
-  - keyring=23.8.2
+  - keyring=24.2.0
   - keyutils=1.6.1
-  - kiwisolver=1.4.4
+  - kiwisolver=1.4.5
   - krb5=1.19.3
   - lame=3.100
-  - lazy-object-proxy=1.7.1
+  - lazy-object-proxy=1.9.0
+  - lazy_loader=0.3
   - lcms2=2.12
-  - ld_impl_linux-64=2.36.1
+  - ld_impl_linux-64=2.40
   - lerc=4.0.0
   - libabseil=20220623.0
-  - libaec=1.0.6
+  - libaec=1.1.1
   - libavif=0.10.1
   - libblas=3.9.0
   - libbrotlicommon=1.0.9
@@ -196,20 +205,21 @@ dependencies:
   - libdap4=3.20.6
   - libdb=6.2.32
   - libdeflate=1.13
-  - libdrm=2.4.112
+  - libdrm=2.4.114
   - libedit=3.1.20191231
   - libev=4.33
   - libevent=2.1.10
+  - libexpat=2.5.0
   - libffi=3.4.2
   - libflac=1.3.4
-  - libgcc-ng=12.1.0
+  - libgcc-ng=13.2.0
   - libgdal=3.5.1
-  - libgfortran-ng=12.1.0
-  - libgfortran5=12.1.0
+  - libgfortran-ng=13.2.0
+  - libgfortran5=13.2.0
   - libglib=2.72.1
-  - libgomp=12.1.0
+  - libgomp=13.2.0
   - libiconv=1.16
-  - libidn2=2.3.3
+  - libidn2=2.3.4
   - libkml=1.3.0
   - liblapack=3.9.0
   - libllvm14=14.0.6
@@ -217,26 +227,26 @@ dependencies:
   - libnghttp2=1.47.0
   - libnsl=2.0.0
   - libogg=1.3.4
-  - libopenblas=0.3.21
+  - libopenblas=0.3.24
   - libopus=1.3.1
-  - libpciaccess=0.16
-  - libpng=1.6.37
+  - libpciaccess=0.17
+  - libpng=1.6.39
   - libpq=14.5
-  - libprotobuf=3.20.1
+  - libprotobuf=3.20.3
   - librttopo=1.1.0
   - libsndfile=1.0.31
   - libsodium=1.0.18
   - libspatialindex=1.9.3
   - libspatialite=5.0.1
-  - libsqlite=3.39.2
+  - libsqlite=3.43.0
   - libssh2=1.10.0
-  - libstdcxx-ng=12.1.0
-  - libtasn1=4.18.0
+  - libstdcxx-ng=13.2.0
+  - libtasn1=4.19.0
   - libtiff=4.4.0
-  - libtool=2.4.6
+  - libtool=2.4.7
   - libudev1=249
   - libunistring=0.9.10
-  - libuuid=2.32.1
+  - libuuid=2.38.1
   - libva=2.15.0
   - libvorbis=1.3.7
   - libvpx=1.11.0
@@ -245,155 +255,162 @@ dependencies:
   - libxcb=1.13
   - libxkbcommon=1.0.3
   - libxml2=2.9.14
-  - libxslt=1.1.35
   - libzip=1.9.2
-  - libzlib=1.2.12
+  - libzlib=1.2.13
   - libzopfli=1.0.3
-  - locket=1.0.0
   - logzero=1.7.0
-  - lxml=4.9.1
-  - lz4-c=1.9.3
-  - mapclassify=2.4.3
-  - markupsafe=2.1.1
-  - matplotlib-base=3.5.2
-  - matplotlib-inline=0.1.3
+  - lz4-c=1.9.4
+  - mapclassify=2.5.0
+  - markdown-it-py=3.0.0
+  - markupsafe=2.1.3
+  - matplotlib-base=3.7.3
+  - matplotlib-inline=0.1.6
   - mccabe=0.6.1
-  - mistune=0.8.4
+  - mdurl=0.1.0
+  - mistune=3.0.1
+  - more-itertools=10.1.0
   - motuclient=1.8.8
-  - multidict=6.0.2
-  - munch=2.5.0
+  - multidict=6.0.4
+  - munch=4.0.0
   - munkres=1.1.4
-  - mypy_extensions=0.4.3
+  - mypy_extensions=1.0.0
   - mysql-common=8.0.30
   - mysql-libs=8.0.30
-  - nbclassic=0.4.3
-  - nbclient=0.6.6
-  - nbconvert=6.5.3
-  - nbconvert-core=6.5.3
-  - nbconvert-pandoc=6.5.3
-  - nbformat=5.4.0
-  - ncurses=6.3
-  - nest-asyncio=1.5.5
+  - nbclassic=1.0.0
+  - nbclient=0.8.0
+  - nbconvert=7.8.0
+  - nbconvert-core=7.8.0
+  - nbconvert-pandoc=7.8.0
+  - nbformat=5.9.2
+  - ncurses=6.4
+  - nest-asyncio=1.5.6
   - netcdf4=1.6.0
   - nettle=3.8.1
-  - networkx=2.8.5
+  - networkx=3.1
   - notebook=6.4.12
-  - notebook-shim=0.1.0
-  - nspr=4.32
-  - nss=3.78
-  - numpy=1.23.1
-  - numpydoc=1.4.0
-  - openh264=2.3.0
+  - notebook-shim=0.2.3
+  - nspr=4.35
+  - nss=3.94
+  - numpy=1.24.4
+  - numpydoc=1.5.0
+  - openh264=2.3.1
   - openjpeg=2.4.0
-  - openssl=1.1.1v
+  - openssl=1.1.1w
+  - overrides=7.4.0
   - p11-kit=0.24.1
-  - packaging=21.3
-  - pandas=1.4.3
-  - pandoc=2.19
+  - packaging=23.2
+  - pandas=2.0.3
+  - pandoc=3.1.3
   - pandocfilters=1.5.0
   - parso=0.8.3
-  - partd=1.3.0
-  - pathspec=0.9.0
-  - patsy=0.5.2
+  - pathspec=0.11.2
+  - patsy=0.5.3
   - pcre=8.45
   - pexpect=4.8.0
   - pickleshare=0.7.5
   - pillow=9.2.0
-  - pip=22.2.2
-  - pixman=0.40.0
+  - pip=23.2.1
+  - pixman=0.42.2
   - pkgutil-resolve-name=1.3.10
-  - platformdirs=2.5.2
-  - plotly=5.10.0
-  - pluggy=1.0.0
+  - platformdirs=3.11.0
+  - plotly=5.17.0
+  - pluggy=1.3.0
   - ply=3.11
+  - pooch=1.7.0
   - poppler=22.04.0
-  - poppler-data=0.4.11
+  - poppler-data=0.4.12
   - portaudio=19.6.0
   - postgresql=14.5
   - proj=9.0.1
-  - prometheus_client=0.14.1
-  - prompt-toolkit=3.0.30
-  - protobuf=3.20.1
-  - psutil=5.9.1
+  - prometheus_client=0.17.1
+  - prompt-toolkit=3.0.39
+  - protobuf=3.20.3
+  - psutil=5.9.5
   - pthread-stubs=0.4
   - ptyprocess=0.7.0
   - pulseaudio=14.0
-  - pyasn1=0.4.8
-  - pyasn1-modules=0.2.7
+  - pyasn1=0.5.0
+  - pyasn1-modules=0.3.0
   - pycodestyle=2.8.0
   - pycparser=2.21
   - pycrs=1.0.2
-  - pydocstyle=6.1.1
-  - pyerfa=2.0.0.1
+  - pydocstyle=6.3.0
+  - pyerfa=2.0.0.3
   - pyfes=2.9.4
   - pyflakes=2.4.0
-  - pygments=2.12.0
+  - pygments=2.16.1
   - pylint=2.7.2
   - pyls-spyder=0.4.0
-  - pyopenssl=22.0.0
-  - pyparsing=3.0.9
-  - pyproj=3.3.1
+  - pyopenssl=23.2.0
+  - pyparsing=3.1.1
+  - pyperclip=1.8.2
+  - pyproj=3.4.0
   - pyqt=5.15.7
   - pyqt5-sip=12.11.0
   - pyqtwebengine=5.15.7
-  - pyrsistent=0.18.1
   - pyshp=2.3.1
   - pysocks=1.7.1
   - python=3.8.13
-  - python-box=6.0.2
+  - python-box=7.1.1
   - python-dateutil=2.8.2
-  - python-fastjsonschema=2.16.1
-  - python-lsp-black=1.2.1
-  - python-lsp-jsonrpc=1.0.0
+  - python-fastjsonschema=2.18.1
+  - python-json-logger=2.0.7
+  - python-lsp-black=1.3.0
+  - python-lsp-jsonrpc=1.1.2
   - python-lsp-server=1.5.0
-  - python-slugify=6.1.2
+  - python-slugify=8.0.1
+  - python-tzdata=2023.3
   - python_abi=3.8
-  - pytoolconfig=1.2.2
-  - pytz=2022.2.1
+  - pytoolconfig=1.2.5
+  - pytz=2023.3.post1
   - pyu2f=0.1.5
-  - pywavelets=1.3.0
+  - pywavelets=1.4.1
   - pyxdg=0.28
-  - pyyaml=6.0
-  - pyzmq=23.2.1
+  - pyyaml=6.0.1
+  - pyzmq=25.1.1
   - qdarkstyle=3.0.3
-  - qstylizer=0.2.1
+  - qstylizer=0.2.2
   - qt-main=5.15.4
   - qt-webengine=5.15.4
-  - qtawesome=1.1.1
+  - qtawesome=1.2.3
   - qtconsole=5.3.1
   - qtconsole-base=5.3.1
-  - qtpy=2.2.0
+  - qtpy=2.4.0
   - rasterio=1.3.0.post1
   - ratelim=0.1.6
   - re2=2022.06.01
-  - readline=8.1.2
-  - requests=2.28.1
-  - rope=1.3.0
+  - readline=8.2
+  - referencing=0.30.2
+  - requests=2.31.0
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rich=13.6.0
+  - rope=1.10.0
+  - rpds-py=0.10.3
   - rsa=4.9
-  - rtree=1.0.0
-  - ruamel.yaml=0.17.21
-  - ruamel.yaml.clib=0.2.6
-  - sankee=0.2.0
-  - scikit-image=0.19.3
-  - scikit-learn=1.1.2
-  - scipy=1.9.0
-  - scooby=0.6.0
-  - seaborn=0.11.2
-  - seaborn-base=0.11.2
+  - rtree=1.0.1
+  - ruamel.yaml=0.17.34
+  - ruamel.yaml.clib=0.2.7
+  - sankee=0.2.4
+  - scikit-image=0.21.0
+  - scikit-learn=1.3.1
+  - scipy=1.10.1
+  - scooby=0.7.4
+  - seaborn=0.13.0
+  - seaborn-base=0.13.0
   - secretstorage=3.3.3
-  - send2trash=1.8.0
-  - setuptools=65.0.1
-  - shapely=1.8.2
-  - simplejson=3.17.6
+  - send2trash=1.8.2
+  - setuptools=68.2.2
+  - shapely=1.8.5
   - sip=6.6.2
   - six=1.16.0
-  - snappy=1.1.9
-  - sniffio=1.2.0
+  - snappy=1.1.10
+  - sniffio=1.3.0
   - snowballstemmer=2.2.0
   - snuggs=1.4.7
   - sortedcontainers=2.4.0
-  - soupsieve=2.3.2.post1
-  - sphinx=5.1.1
+  - soupsieve=2.5
+  - sphinx=7.0.0
   - sphinxcontrib-applehelp=1.0.2
   - sphinxcontrib-devhelp=1.0.2
   - sphinxcontrib-htmlhelp=2.0.0
@@ -402,46 +419,49 @@ dependencies:
   - sphinxcontrib-serializinghtml=1.1.5
   - spyder=5.3.2
   - spyder-kernels=2.3.2
-  - sqlite=3.39.2
-  - statsmodels=0.13.2
+  - sqlite=3.43.0
+  - statsmodels=0.14.0
   - svt-av1=1.2.0
-  - tenacity=8.0.1
-  - terminado=0.15.0
+  - tenacity=8.2.3
+  - terminado=0.17.1
   - text-unidecode=1.3
-  - textdistance=4.3.0
-  - threadpoolctl=3.1.0
+  - textdistance=4.5.0
+  - threadpoolctl=3.2.0
   - three-merge=0.1.1
-  - tifffile=2022.8.12
+  - tifffile=2022.10.10
   - tiledb=2.9.5
-  - tinycss2=1.1.1
-  - tk=8.6.12
+  - tinycss2=1.2.1
+  - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
-  - toolz=0.12.0
-  - tornado=6.2
-  - tqdm=4.64.0
-  - traitlets=5.3.0
+  - tornado=6.3.3
+  - tqdm=4.66.1
+  - traitlets=5.11.2
   - traittypes=0.2.1
-  - typing-extensions=4.3.0
-  - typing_extensions=4.3.0
-  - tzcode=2022c
-  - tzdata=2022b
-  - ujson=5.3.0
-  - unicodedata2=14.0.0
-  - unidecode=1.3.4
-  - uritemplate=3.0.1
-  - urllib3=1.26.11
-  - watchdog=2.1.9
-  - wcwidth=0.2.5
+  - types-python-dateutil=2.8.19.14
+  - typing-extensions=4.8.0
+  - typing_extensions=4.8.0
+  - typing_utils=0.1.0
+  - tzcode=2023c
+  - tzdata=2023c
+  - ujson=5.8.0
+  - unicodedata2=15.1.0
+  - uri-template=1.3.0
+  - uriparser=0.9.7
+  - uritemplate=4.1.1
+  - urllib3=2.0.5
+  - watchdog=3.0.0
+  - wcwidth=0.2.8
+  - webcolors=1.13
   - webencodings=0.5.1
-  - websocket-client=1.3.3
-  - whatthepatch=1.0.2
-  - wheel=0.37.1
-  - whitebox=2.1.4
-  - whiteboxgui=0.7.0
-  - widgetsnbextension=3.6.1
+  - websocket-client=1.6.3
+  - whatthepatch=1.0.5
+  - wheel=0.41.2
+  - whitebox=2.3.1
+  - whiteboxgui=2.3.0
+  - widgetsnbextension=4.0.9
   - wrapt=1.12.1
-  - wurlitzer=3.0.2
+  - wurlitzer=3.0.3
   - x264=1!164.3095
   - x265=3.5
   - xcb-util=0.4.0
@@ -449,13 +469,13 @@ dependencies:
   - xcb-util-keysyms=0.4.0
   - xcb-util-renderutil=0.3.9
   - xcb-util-wm=0.4.1
-  - xerces-c=3.2.3
+  - xerces-c=3.2.4
   - xorg-fixesproto=5.0
   - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
+  - xorg-libice=1.1.1
+  - xorg-libsm=1.2.4
   - xorg-libx11=1.7.2
-  - xorg-libxau=1.0.9
+  - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
   - xorg-libxfixes=5.0.3
@@ -463,14 +483,14 @@ dependencies:
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
-  - xyzservices=2022.6.0
+  - xyzservices=2023.7.0
   - xz=5.2.6
   - yaml=0.2.5
-  - yapf=0.32.0
-  - yarl=1.7.2
+  - yapf=0.40.1
+  - yarl=1.9.2
   - zeromq=4.3.4
   - zfp=1.0.0
-  - zipp=3.8.1
-  - zlib=1.2.12
-  - zlib-ng=2.0.6
-  - zstd=1.5.2
+  - zipp=3.17.0
+  - zlib=1.2.13
+  - zlib-ng=2.0.7
+  - zstd=1.5.5
