--- a/coastguard_environment.yml
+++ b/coastguard_environment.yml
@@ -4,15 +4,15 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - earthengine-api
-  - geopandas
-  - spyder
-  - geemap
-  - scikit-image
-  - rasterio
-  - seaborn
-  - astropy
-  - geopy
-  - pyfes
-  - motuclient
-  - netcdf4
+  - earthengine-api=0.1.371
+  - geopandas=0.11.1
+  - spyder=5.3.2
+  - geemap=
+  - scikit-image=0.21.0
+  - rasterio=1.3.0.post1
+  - seaborn=0.13.0
+  - astropy=5.1
+  - geopy=2.4.0
+  - pyfes=2.9.4
+  - motuclient=1.8.8
+  - netcdf4=1.6.0
