--- a/coastguard_environment.yml
+++ b/coastguard_environment.yml
@@ -1,18 +1,18 @@
 name: coastguard
 channels:
-  - fbriol
   - conda-forge
   - defaults
 dependencies:
-  - earthengine-api=0.1.371
-  - geopandas=0.11.1
-  - spyder=5.3.2
-  - geemap=
-  - scikit-image=0.21.0
-  - rasterio=1.3.0.post1
-  - seaborn=0.13.0
-  - astropy=5.1
-  - geopy=2.4.0
-  - pyfes=2.9.4
-  - motuclient=1.8.8
-  - netcdf4=1.6.0
+  - earthengine-api
+  - geopandas
+  - spyder
+  - geemap
+  - scikit-image
+  - matplotlib
+  - rasterio
+  - seaborn
+  - astropy
+  - geopy
+  - notebook
+  - motuclient
+  - netcdf4
