--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Classification/Data/
 Classification/training_data/
 Validation/
 Data/EXAMPLE/jpg_files/
-
+Data/EXAMPLE/AOImap.html
 
 CL_DriverTemplate_Test.py
 VegEdge_Montrose2022.py
