trying to delete Cell_1b_MHWS

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,11 @@ fes2014/
 *.ini
 
 *.zip
+Data/referenceLines/Cell_1b_Modern_Soft.CPG
+Data/referenceLines/Cell_1b_Modern_Soft.dbf
+Data/referenceLines/Cell_1b_Modern_Soft.prj
+Data/referenceLines/Cell_1b_Modern_Soft.sbn
+Data/referenceLines/Cell_1b_Modern_Soft.sbx
+Data/referenceLines/Cell_1b_Modern_Soft.shp
+Data/referenceLines/Cell_1b_Modern_Soft.shp.xml
+Data/referenceLines/Cell_1b_Modern_Soft.shx
