--- a/coastguard_environment.yml
+++ b/coastguard_environment.yml
@@ -5,7 +5,8 @@ channels:
 dependencies:
   - earthengine-api
   - geopandas
-  - spyder
+  - pandas=2.0.3
+  - spyder=5.5.0
   - geemap
   - scikit-image
   - matplotlib
