ignore upscaling driver

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ VegEdge_RedRiver.py
 VegEdge_FullS2Run.py
 VedgeSat_Driver_Musselburgh.py
 VedgeSat_Driver_StAndrews_StormBabet.py
+VedgeSat_DriverTemplate_Upscaled.py
 
 VegEdge_Validation.ipynb
 VegEdge.ipynb
