Hide virtual documents

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ VegEdge_Validation.ipynb
 VegEdge.ipynb
 Shoreline.ipynb
 
+.virtual_documents
 .ipynb_checkpoints/
 CoastWatch.ipynb
 .ipynb_checkpoints/CoastWatch-checkpoint.ipynb
