Ignore new driver

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Data/referenceLines/Cell_1b_Modern_Soft.sbx
 Data/referenceLines/Cell_1b_Modern_Soft.shp
 Data/referenceLines/Cell_1b_Modern_Soft.shp.xml
 Data/referenceLines/Cell_1b_Modern_Soft.shx
+VedgeSat_Driver_Mombasa.py
