Testing ipynb added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ VedgeSat_Driver_Musselburgh.py
 VedgeSat_Driver_StAndrews_StormBabet.py
 VedgeSat_DriverTemplate_Upscaled.py
 VegEdge_FullS2Run_Montrose.py
+VedgeSat_Driver_Mombasa.py
+VedgeSat_DriverTemplate_Testing.ipynb
 
 
 VegEdge_Validation.ipynb
@@ -52,4 +54,4 @@ Data/referenceLines/Cell_1b_Modern_Soft.sbx
 Data/referenceLines/Cell_1b_Modern_Soft.shp
 Data/referenceLines/Cell_1b_Modern_Soft.shp.xml
 Data/referenceLines/Cell_1b_Modern_Soft.shx
-VedgeSat_Driver_Mombasa.py
+
