Narrabeen run to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ VedgeSat_DriverTemplate_Upscaled.py
 VegEdge_FullS2Run_Montrose.py
 VedgeSat_Driver_Mombasa.py
 VedgeSat_DriverTemplate_Testing.ipynb
+VedgeSat_Narrabeen.py
 
 
 VegEdge_Validation.ipynb
@@ -54,4 +55,5 @@ Data/referenceLines/Cell_1b_Modern_Soft.sbx
 Data/referenceLines/Cell_1b_Modern_Soft.shp
 Data/referenceLines/Cell_1b_Modern_Soft.shp.xml
 Data/referenceLines/Cell_1b_Modern_Soft.shx
+
 
