Type fixed in copernicusmarine for https://github.com/fmemuir/COASTGUARD/issues/31

--- a/coastguard_env.yml
+++ b/coastguard_env.yml
@@ -5,6 +5,6 @@ channels:
 dependencies:
   - pip
   - pip:
-    - copernicusmarine>=1.0<=2.0
+    - copernicusmarine>=1.0,<=2.0
   - python=3.10
   - pyfes
