Reshuffling CoastLearn for template use

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ Data/referenceLines/Cell_1b_Modern_Soft.shx
 
 VedgeSat_Perranporth.py
 CoastLearn_Driver_StAndrewsFull.py
+CoastLearn_Driver_StAndrewsTest.py
