--- a/coastguard_env.yml
+++ b/coastguard_env.yml
@@ -3,8 +3,21 @@ channels:
   - conda-forge
   - fbriol
 dependencies:
-  - pip
-  - pip:
-    - copernicusmarine>=1.0,<=2.0
   - python=3.10
   - pyfes
+  - earthengine-api
+  - pandas=2.0.3
+  - geopandas
+  - spyder=5.5.0
+  - geemap
+  - scikit-image
+  - matplotlib
+  - rasterio
+  - seaborn
+  - astropy
+  - geopy
+  - notebook
+  - netcdf4
+  - arosics
+  - utm
+  - xarray
